fix: extra white space

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -90,3 +90,7 @@
     background: transparent;
     cursor: pointer;
   }
+
+  body {
+    background-color: black;
+  }
